fix: ajustar scroll do menu lateral e visibilidade no modo desktop

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -13,7 +13,21 @@
   flex-direction: column;
   will-change: transform, left;
 
+  overflow-y: auto;
+
+  &::-webkit-scrollbar {
+    width: 4px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: #32CD32;
+    border-radius: 10px;
+  }
+  &::-webkit-scrollbar-track {
+    background: #0d0d0f;
+  }
+
   .profile {
+    flex-shrink: 0;
     text-align: center;
     margin-bottom: 2rem;
 
@@ -81,11 +95,11 @@
 
 .nav-menu {
   flex-grow: 1;
-  margin-top: 2rem;
+  margin-top: 1rem;
 
   ul {
     list-style: none;
-    padding: 0;
+    padding: 2rem;
 
     li {
       margin-bottom: 0.5rem;
@@ -168,4 +182,11 @@
       pointer-events: all; // Reativa cliques
     }
   }
+}
+
+.header-footer {
+  flex-shrink: 0; // Garante que o copyright não suma
+  padding-top: 1rem;
+  text-align: center;
+  border-top: 1px solid rgba(255, 255, 255, 0.05);
 }
